--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-facebook-login": "^4.0.1",
+    "react-facebook-message-us": "^0.0.1",
     "react-ga": "^2.5.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
